# qtcreator

./: CMakeLists.txt  Dracula.json.in  INSTALL.md  README.md  dracula.cpp  dracula.qrc  dracula.xml  drakula.creatortheme  drakula.figmatokens
.github/workflows/: build_cmake.yml
